--- a/examples_excersises-from-class/3-1/css/style.css
+++ b/examples_excersises-from-class/3-1/css/style.css
@@ -1,1 +1,5 @@
+/*
+	Header: open sans........;
+*/
+
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Open+Sans&display=swap');
