--- a/personal/style.css
+++ b/personal/style.css
@@ -8,20 +8,25 @@
 	font-family: "ResourceHanRoundedTC", sans-serif; 
 
 font-family: 'Heebo', sans-serif;
-
-font-family: 'IBM Plex Serif', serif;
-
 font-family: 'Inter', sans-serif;
 
 font-family: 'Josefin Slab', serif;
 
-font-family: 'Noticia Text', serif;
+font-family: 'IBM Plex Serif', serif;
+
+不喜歡font-family: 'Noticia Text', serif;
 
 英文:
+導覽列
+
+進度條
+		.scrollbar > a{
+			font-family: 'Josefin Slab', serif;
+		}
 內文
-	font-family: "Inter", sans-serif;
+		font-family: 'Heebo', sans-serif;
 標題
-	font-family:"IBM Plex Serif", serif;
+		font-family: 'Josefin Slab', serif;
 
 */
 
@@ -40,13 +45,6 @@ font-family: 'Noticia Text', serif;
   font-family: ResourceHanRoundedTC;
   src: url(RHR-TTF-0.990/ResourceHanRoundedTC-Regular.ttf);
 }
-
-
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,600;0,700;1,400&family=Noticia+Text:wght@400;700&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300;400&family=IBM+Plex+Serif&family=Inter:wght@200;400&family=Josefin+Slab:wght@700&family=Noticia+Text&display=swap');
 
 
 *{
@@ -68,8 +66,6 @@ body {
 	font-size: 3.5vh;
 	line-height: 5vh;
 }
-
-
 
 nav{
 	position: fixed;
@@ -97,7 +93,6 @@ nav>a{
 	height: 7vh;
 	font-weight: bold;
 	font-size: 1.7vw;
-	vertical-align:middle
 	text-align: left;
 	padding: 1vh 0 1vh 9%;
 	z-index: 2;
@@ -123,6 +118,17 @@ a>img{
 	padding: 0 4% 1% 0;
 }
 
+.current-page{
+	font-size: 2vw;
+}
+
+.current-page img{
+	width: 30%;
+	padding-left: 0;
+	margin-left: -2%;
+	margin-right: 1%;
+}
+
 img{
 	width: 100%;
 	height: auto;	
@@ -139,11 +145,12 @@ body > figure:last-child{
 h1,h2,h3 {
 	font-family:"IBM Plex Serif", serif;
 	font-family: ResourceHanRoundedTC, sans-serif; 
+	font-weight: 800;
 }
 
 h1{
-	font-size: 6vh;
-	line-height: 8vh;
+	font-size: 8vh;
+	line-height: 10vh;
 	margin: 1vh 0;
 }
 
@@ -151,6 +158,7 @@ h3{
 	font-size: 5vh;
 	line-height: 7.5vh;
 	margin: 2vh 0 1.5vh 0;
+	font-weight: bold;
 }
 	
 .article{
