essay analysis nav debug
剛剛找到解決方法，把nav的z-index射程2就沒問題了，不然沒設定時nav在essay那一篇會被文章蓋到，區域重疊時無法正常運作

--- a/essay_analysis/css/style.css
+++ b/essay_analysis/css/style.css
@@ -69,6 +69,7 @@ nav {
 	font-family: Poppins, sans-serif;
 	font-size: 2vh;
 	line-height: 3vh;
+	z-index: 2;/*不然在essay那一篇會被文章蓋到，區域重疊時無法正常運作*/
 }
 
 nav > a {
