--- a/personal/new/old and new/style.css
+++ b/personal/new/old and new/style.css
@@ -66,18 +66,14 @@ html{
 }
 
 body {
+	/* color is default as home page */
+	background-color: rgb(235, 245, 251);
+	padding-top: 56px;
 	font-family: "Inter", sans-serif;
 	font-family: TaipeiSansTCBeta, serif;
 }
 
-/* different body background color */
-.bg-home-page{
-	background-color: rgb(235, 245, 251);
-}
 
-.bg-feature-page{
-	background-color: rgb(234, 215, 215);
-}
 
 /* only show on lg screen and larger */
 .show-on-lg {
@@ -206,38 +202,6 @@ a>img{ /*make fire icon look good*/
 	width: 90%;
 }
 
-/* article small block title */
-.title{
-	width: 55%;
-	margin-top: 3%;
-	margin-bottom: -15px;
-	padding-top: 15px;
-	padding-bottom: 0;
-	z-index: 1;
-}
-
-.title-text{
-	color: rgb(255, 255, 255);
-	background-color: rgb(152, 3, 3);
-	border: none;
-}
-
-
-h1,h2,h3 {
-	font-family:"IBM Plex Serif", serif;
-	font-family: ResourceHanRoundedTC, sans-serif; 
-	font-weight: 800;
-} 
-
-/* modal styling */
-.modal-button{
-	color: rgb(45, 45, 42);
-	background-color: rgb(251, 246, 234);
-	border-color: rgba(213, 188, 145, 0.745);
-	font-weight: 900;
-	border-style: solid;
-	border-width: 2px;
-}
 
 	
 
