--- a/personal/new/old and new/feature.css
+++ b/personal/new/old and new/feature.css
@@ -19,6 +19,11 @@ body {
 	border: none;
 }
 
+/* article in section mini title */
+.section-mini-title{
+	margin: 5% 0 2% 0;
+	font-size: 1.5em;
+}
 
 h1,h2,h3 {
 	font-family:"IBM Plex Serif", serif;
@@ -49,6 +54,7 @@ h1,h2,h3 {
 	padding: 1%;
 }
 
+/* for the side by side img in section 2 */
 .side-by-side{
 	border-radius: 5px;
 	border-style: solid;
@@ -58,8 +64,15 @@ h1,h2,h3 {
 	width: 95%;
 }
 
-
-
+.card-in-section{
+	border-radius: 5px;
+	border-style: solid;
+	border-width: 1px;
+	text-align: center;
+	padding-top: 3%;
+	width: 95%;
+	margin-bottom: 3%;
+}
 
 
 /* figure > figcaption{
